[tool.poetry]
name = "hello"
version = "0.1.0"
description = ""
authors = ["Yani Lathouris <ylathouris@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[tool.poetry.plugins."hello.formatters"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
